--- a/package.json
+++ b/package.json
@@ -6,9 +6,14 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.21.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-markdown": "^7.0.1",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-syntax-highlighter": "^15.4.4",
+    "rehype-raw": "^6.1.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
@@ -19,12 +24,6 @@
   },
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
   },
   "browserslist": {
     "production": [
@@ -39,11 +38,13 @@
     ]
   },
   "devDependencies": {
+    "clsx": "^1.1.1",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-react": "^7.25.2",
     "husky": "^7.0.2",
     "lint-staged": "^11.1.2",
-    "prettier": "2.4.1"
+    "prettier": "2.4.1",
+    "prop-types": "^15.7.2"
   }
 }
